--- a/docs/tools/templates/template.cshtml
+++ b/docs/tools/templates/template.cshtml
@@ -47,6 +47,9 @@
             <li class="nav-header">Getting started</li>
             <li><a href="@Root/tutorial.html">Sample tutorial</a></li>
 
+            <li class="nav-header">Technical Overview</li>
+            <li><a href="@Root/overview.html">Technical Overview</a></li>
+
             <li class="nav-header">Documentation</li>
             <li><a href="@Root/reference/index.html">API Reference</a></li>
           </ul>
