--- a/docs/tools/templates/template.cshtml
+++ b/docs/tools/templates/template.cshtml
@@ -45,10 +45,9 @@
             <li><a href="@Properties["project-github"]/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
             
             <li class="nav-header">Getting started</li>
-            <li><a href="@Root/tutorial.html">Sample tutorial</a></li>
-
-            <li class="nav-header">Technical Overview</li>
+            <li><a href="@Root/tutorial.html">FsPickler tutorial</a></li>
             <li><a href="@Root/overview.html">Technical Overview</a></li>
+            <li><a href="https://github.com/nessos/FsPickler/wiki/Performance">Performance</a></li>
 
             <li class="nav-header">Documentation</li>
             <li><a href="@Root/reference/index.html">API Reference</a></li>
