--- a/docs/tools/templates/template.cshtml
+++ b/docs/tools/templates/template.cshtml
@@ -47,7 +47,7 @@
             <li class="nav-header">Getting started</li>
             <li><a href="@Root/tutorial.html">FsPickler tutorial</a></li>
             <li><a href="@Root/overview.html">Technical Overview</a></li>
-            <li><a href="https://github.com/nessos/FsPickler/wiki/Performance">Performance</a></li>
+            <li><a href="@Root/benchmarks.html">Performance</a></li>
 
             <li class="nav-header">Documentation</li>
             <li><a href="@Root/reference/index.html">API Reference</a></li>
