--- a/docs/tools/templates/template.cshtml
+++ b/docs/tools/templates/template.cshtml
@@ -34,7 +34,9 @@
           @RenderBody()
         </div>
         <div class="span3">
-          <img src="@Root/img/nessos.png" alt="F# Project" style="width:150px;margin:10px" />  
+          <a target="_blank" href="http://www.nessos.gr/">
+			<img src="@Root/img/nessos.png" alt="F# Project" style="width:150px;margin:10px" /> 
+		  </a>
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">@Properties["project-name"]</li>
             <li><a href="@Root/index.html">Home page</a></li>
