--- a/docs/tools/templates/template.cshtml
+++ b/docs/tools/templates/template.cshtml
@@ -45,13 +45,12 @@
             <li><a href="@Properties["project-github"]">Source Code on GitHub</a></li>
             <li><a href="@Properties["project-github"]/blob/master/License.md">License</a></li>
             <li><a href="@Properties["project-github"]/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
-            
-            <li class="nav-header">Getting started</li>
-            <li><a href="@Root/tutorial.html">FsPickler tutorial</a></li>
-            <li><a href="@Root/overview.html">Technical Overview</a></li>
-            <li><a href="@Root/benchmarks.html">Performance</a></li>
 
             <li class="nav-header">Documentation</li>
+            <li><a href="@Root/tutorial.html">Tutorial</a></li>
+            <li><a href="@Root/benchmarks.html">Performance</a></li>
+            <li class="divider"></li>
+            <li><a href="@Root/overview.html">Technical Overview</a></li>
             <li><a href="@Root/reference/index.html">API Reference</a></li>
           </ul>
         </div>
