--- a/content/style.css
+++ b/content/style.css
@@ -143,14 +143,6 @@ td.title, thead {
 #main li { font-size: 11pt; margin: 5px 0px 5px 0px; }
 #main strong { font-weight:700; }
 
-/* Override link styling in headers */
-h1 a, h1 a:hover, 
-h2 a, h2 a:hover,
-h3 a, h3 a:hover,
-h4 a, h4 a:hover,
-h5 a, h5 a:hover,
-h6 a, h6 a:hover { color : inherit; text-decoration : inherit; }
-
 /*-------------------------------------------------------------------------- 
   Formatting for API reference
 /*--------------------------------------------------------------------------*/
@@ -182,6 +174,17 @@ h6 a, h6 a:hover { color : inherit; text-decoration : inherit; }
 .github-link:hover .hover { display:block; }
 .github-link .normal { display: block; }
 .github-link:hover .normal { display: none; }
+
+/*-------------------------------------------------------------------------- 
+  Links 
+/*--------------------------------------------------------------------------*/
+
+h1 a, h1 a:hover, h1 a:focus,
+h2 a, h2 a:hover, h2 a:focus,
+h3 a, h3 a:hover, h3 a:focus,
+h4 a, h4 a:hover, h4 a:focus,
+h5 a, h5 a:hover, h5 a:focus,
+h6 a, h6 a:hover, h6 a:focus { color : inherit; text-decoration : inherit; outline:none }
 
 /*-------------------------------------------------------------------------- 
   Additional formatting for the homepage 
