Nessos.FsPickler --> MBrace.FsPickler

--- a/docs/tools/templates/template.cshtml
+++ b/docs/tools/templates/template.cshtml
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li><a href="http://nessos.github.io/">nessos</a></li>
+          <li><a href="http://mbrace.io/">mbrace</a></li>
           <li><a href="@Properties["project-github"]">github page</a></li>
         </ul>
         <h3 class="muted"><a href="@Root/index.html">@Properties["project-name"]</a></h3>
@@ -34,8 +34,8 @@
           @RenderBody()
         </div>
         <div class="span3">
-          <a target="_blank" href="http://www.nessos.gr/">
-      <img src="@Root/img/nessos.png" alt="F# Project" style="width:150px;margin:10px" /> 
+          <a target="_blank" href="http://mbrace.io/">
+      <img src="@Root/img/mbrace.png" alt="F# Project" style="width:150px;margin:10px" /> 
       </a>
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">@Properties["project-name"]</li>
