--- a/docs/tools/templates/template.cshtml
+++ b/docs/tools/templates/template.cshtml
@@ -49,7 +49,7 @@
             <li class="nav-header">Documentation</li>
             <li><a href="@Root/tutorial.html">Tutorial</a></li>
             <li><a href="@Root/overview.html">Technical Overview</a></li>
-            <li><a href="@Root/benchmarks.html">Performance</a></li>
+            <li><a href="https://github.com/mbraceproject/FsPickler/wiki/.NET-Core-Benchmarks">Performance</a></li>
             <li><a href="@Root/reference/index.html">API Reference</a></li>
           </ul>
         </div>
